ajusted SSCarrosFacade to CarrosDAO. agora falta ajustar os DAOs do SSCampeonatos.