@@ -5,6 +5,7 @@ import java.util.Collection;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import business.campeonatos.Piloto;
 
@@ -175,7 +176,7 @@ public class PilotosDAO implements Map<Integer,Piloto> {
 
     @Override
     public Collection<Piloto> values() {
-        return new HashSet<>(this.keySet().stream().map(key -> this.get(key)).toList());
+        return (this.keySet().stream().map(this::get).collect(Collectors.toList()));
     }
     
 }
