@@ -5,6 +5,7 @@ import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 import java.sql.*;
+import java.util.stream.Collectors;
 
 import business.utilizadores.Utilizador;
 
@@ -174,6 +175,6 @@ public class UtilizadoresDAO implements Map<String,Utilizador> {
 
     @Override
     public Collection<Utilizador> values() {
-        return new HashSet<>(this.keySet().stream().map(key -> this.get(key)).toList());
+        return (this.keySet().stream().map(this::get).collect(Collectors.toList()));
     }
 }
